--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "prepublish": "grunt prepublish",
-    "test": "grunt test"
+    "test": "node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
