--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "description": "Outline model layer used by TaskPaper",
   "main": "./lib/index",
-  "atomTestRunner": "./spec/atomTestRunner",
+  "atomTestRunner": "./test/atomTestRunner",
   "scripts": {
-    "prepublish": "grunt prepublish",
-    "test": "node_modules/.bin/mocha"
+    "prepublish": "./node_modules/gulp/bin/gulp.js prepublish",
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -26,24 +26,17 @@
   "devDependencies": {
     "atomdoc-md": "^0.6.7",
     "chai": "^3.5.0",
-    "coffee-cache": "^0.2.0",
     "coffee-script": "^1.7.0",
-    "grunt": "^0.4.1",
-    "grunt-cli": "^0.1.8",
-    "grunt-coffeelint": "^0.0.6",
-    "grunt-contrib-coffee": "^0.9.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-exec": "^1.0.0",
-    "grunt-mocha-test": "^0.12.7",
-    "grunt-peg": "^2.0.1",
-    "grunt-shell": "^0.2.2",
-    "grunt-webpack": "^1.0.11",
+    "gulp": "^3.9.1",
+    "gulp-cached": "^1.1.0",
+    "gulp-clean": "^0.3.2",
+    "gulp-coffee": "^2.3.2",
+    "gulp-coffeelint": "^0.6.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-util": "^3.0.7",
     "json-loader": "^0.5.4",
     "loophole": "^1.1.0",
     "mocha": "^2.5.3",
-    "rimraf": "^2.2.2",
-    "temp": "^0.6.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-stream": "^3.2.0"
   }
 }
