--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "birch-outline",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Cross-platform scripting for TaskPaper",
   "main": "./lib/index",
   "atomTestRunner": "./spec/atomTestRunner",
@@ -22,6 +22,7 @@
     "underscore-plus": "^1.6.6"
   },
   "devDependencies": {
+    "birch-doc": "0.2.0",
     "chai": "^3.5.0",
     "coffee-script": "^1.7.0",
     "gulp": "^3.9.1",
